// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
   provider = "prisma-client-js"
   output   = "../generated/prisma"
}

datasource db {
   provider = "mysql"
   url      = env("DATABASE_URL")
}

enum MuseumType {
   ART
   HISTORY
   SCIENCE
   ARCHAEOLOGY
   NATURAL_HISTORY
   TECHNOLOGY
}

model Museum {
   id            Int        @id @default(autoincrement())
   name          String
   description   String     @db.Text
   city          String
   address       String
   coverImageUrl String     @map("cover_image_url") @db.Text
   type          MuseumType

   artworks Artwork[]

   @@map("museum")
}

model Artwork {
   id            Int    @id @default(autoincrement())
   museumId      Int    @map("museum_id")
   authorId      Int    @map("author_id")
   title         String
   description   String @db.Text
   coverImageUrl String @map("cover_image_url") @db.Text

   museum Museum @relation(fields: [museumId], references: [id], onDelete: Cascade)
   author Author @relation(fields: [authorId], references: [id], onDelete: Cascade)

   @@map("artwork")
}

model Author {
   id        Int    @id @default(autoincrement())
   firstName String @map("first_name")
   lastName  String @map("last_name")

   artworks Artwork[]

   @@map("author")
}

model Post {
   id        Int      @id @default(autoincrement())
   name      String
   createdAt DateTime @default(now())
   updatedAt DateTime @updatedAt

   @@index([name])
}
